# update_internal_profile

./: .gitignore  README.md  assemble_JSON.py  pyproject.toml  report.md
outputs/: 01.client_overview_and_status.json  02.search_parameters.json  03.financial_profile.json  04.business_characteristics.json  05.professional_background.json  06.development_areas.json  07.work_environment_fit.json  08.deal_experience.json  09.personal_and_family_context.json  10.interests_and_influences.json  11.psychology_and_coaching_insights.json  11a.behavioral_snapshot.json  12.business_fit_evaluation.json  13.interaction_notes_and_red_flags.json  14.at_a_glance.json  15.client_stated_excitement.json  16.recommended_business_types.json  17.analyst_ai_fit_recommendations.json  18.low_fit_or_misfit.json  20.outreach_tracker.json  21.evolution_tracking.json  22.psychology_signals_since_last_update.json
src/internal_profile_update/: crew.py  main.py
src/internal_profile_update/config/: agents.yaml  tasks.yaml
